# story-harness-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MODULE.md  README.md  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
adapters/: MODULE.md  README.md
demo-light-novel-short/: MODULE.md  README.md  entities.yaml  manuscript.md  outline.yaml  project.yaml  structures.yaml
demo-light-novel-short/chapters/: chapter-001.md  chapter-002.md  chapter-003.md
demo-light-novel-short/logs/: latest-analysis.yaml  projection-log.yaml
demo-light-novel-short/projections/: context-lens.yaml  projection.yaml
demo-light-novel-short/reviews/: change-requests.yaml  story-reviews.yaml
demo-novel/: entities.yaml  manuscript.json  manuscript.md  manuscript.txt  outline.yaml  project.yaml  structures.yaml  threads.yaml  timeline.yaml
demo-novel/chapters/: chapter-001.md  chapter-002.md  chapter-003.md  chapter-004.md  (+4 more)
demo-short-story/: README.md  entities.yaml  manuscript.md  outline.yaml  project.yaml  threads.yaml
demo-urban-occult-long/: MODULE.md  PRD.md  README.md  entities.yaml  manuscript.md  outline.yaml  project.yaml
demo-xuanhuan-short/: MODULE.md  README.md  entities.yaml  manuscript.md  outline.yaml  project.yaml
docs/: AI_REPO_BOOTSTRAP_PLAYBOOK.md  AI_REPO_INIT_PROMPT.md  ARCHITECTURE_GUARDRAILS.md  COMMIT_POLICY.md  DOCUMENT_LIFECYCLE.md  ENGINEERING_GOVERNANCE.md  MODULE.md  PROJECT_PROFILE.md  roadmap.md
scripts/: check_commit_message.sh  check_commit_messages_range.sh  install_adapter.py  install_adapters.py
(+244 files in other folders)
