[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "story-harness-cli"
version = "0.1.0"
description = "Agent-native fiction workflow CLI for long-form narrative writing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Story Harness Contributors", email = "opensource@example.com" }
]
dependencies = []

[project.scripts]
story-harness = "story_harness_cli.main:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/story_harness_cli"]
